--- a/README
+++ b/README
@@ -7,8 +7,7 @@ About
 A simple kde-plasma-dataengine that handles the xml streams provided by [the city of
 Châtellerault](http://www.ville-chatellerault.fr) (in France)
 
-The code is based on **kde-plasma** dataengine tutorial : 
-[http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines](http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines)
+The code is based on [kde-plasma dataengine tutorial](http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines)
 
 
 Installation
